Added base for TP3

--- a/TP_siaa_etudiants/project_2017/TP_IMA.vcxproj
+++ b/TP_siaa_etudiants/project_2017/TP_IMA.vcxproj
@@ -234,6 +234,7 @@ copy "$(ProjectDir)\..\..\dependencies-2017_x64\lib\$(Configuration)\*.dll" "$(O
     <ClInclude Include="..\src\Application\KeyboardStatus.h" />
     <ClInclude Include="..\src\Application\Menu.h" />
     <ClInclude Include="..\src\Application\TP1_siaa.h" />
+    <ClInclude Include="..\src\Application\TP3_siaa.h" />
     <ClInclude Include="..\src\Config.h" />
     <ClInclude Include="..\src\GL\compatibility.h" />
     <ClInclude Include="..\src\HelperGl\Buffer.h" />
