--- a/TP_siaa_etudiants/project_2017/TP_IMA.vcxproj.filters
+++ b/TP_siaa_etudiants/project_2017/TP_IMA.vcxproj.filters
@@ -249,6 +249,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="..\src\SceneGraph\HermiteSpline.h" />
     <ClInclude Include="..\src\SceneGraph\Trajectoire.h" />
+    <ClInclude Include="..\src\Application\TP3_siaa.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TP_IMA.rc" />
