--- a/TP_siaa_etudiants/project_2017/TP_IMA.vcxproj
+++ b/TP_siaa_etudiants/project_2017/TP_IMA.vcxproj
@@ -231,9 +231,11 @@ copy "$(ProjectDir)\..\..\dependencies-2017_x64\lib\$(Configuration)\*.dll" "$(O
     <ClInclude Include="..\src\Application\ApplicationSelection.h" />
     <ClInclude Include="..\src\Application\Base.h" />
     <ClInclude Include="..\src\Application\BaseWithKeyboard.h" />
+    <ClInclude Include="..\src\Application\CCD.h" />
     <ClInclude Include="..\src\Application\KeyboardStatus.h" />
     <ClInclude Include="..\src\Application\Menu.h" />
     <ClInclude Include="..\src\Application\TP1_siaa.h" />
+    <ClInclude Include="..\src\Application\TP2_siaa.h" />
     <ClInclude Include="..\src\Config.h" />
     <ClInclude Include="..\src\GL\compatibility.h" />
     <ClInclude Include="..\src\HelperGl\Buffer.h" />
